--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-athena": "^3.150.0",
+    "@aws-sdk/client-cognito-identity": "^3.150.0",
+    "@aws-sdk/client-polly": "^3.150.0",
+    "@aws-sdk/client-s3": "^3.150.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.150.0",
+    "@aws-sdk/polly-request-presigner": "^3.150.0",
+    "axios": "^0.27.2",
+    "exceljs": "^4.3.0",
     "next": "12.2.5",
+    "next-s3-upload": "^0.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
