--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.2.5",
     "next-s3-upload": "^0.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "18.7.3",
