--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "^3.150.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.150.0",
     "@aws-sdk/polly-request-presigner": "^3.150.0",
+    "@aws-sdk/s3-request-presigner": "^3.150.0",
     "axios": "^0.27.2",
     "exceljs": "^4.3.0",
     "next": "12.2.5",
